fix the bug of head right overflow

--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 .header {
-  width: 100%;
+  width: 95%;
   display: flex;
   flex-direction: row;
   background: black;
